# opencv-initial

./: README.md
c++/: CMakeLists.txt
c++/h/: rotaciona_main.hpp  video_main.hpp
c++/src/: main.cpp  rotaciona_main.cpp  video_main.cpp
java/app/: build.gradle  roda.sh
java/app/src/main/java/org/example/: Rotaciona.java
rust/: Cargo.toml
rust/src/: main.rs  rotaciona.rs  video.rs
